--- a/gallery/templates/base.html
+++ b/gallery/templates/base.html
@@ -21,7 +21,8 @@
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap-responsive.min.css' %}" />
   {% endblock %}
-
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
 
 </head>
 
