--- a/gallery/templates/index.html
+++ b/gallery/templates/index.html
@@ -1,6 +1,6 @@
 {%extends 'base.html'%}
 
-
+{% load static %}
 
 {% block content %}
 
@@ -8,9 +8,36 @@
 
 {{block.super}}
 
-<h1 class='text-center'>News </h1>
-
-
+<section>
+    <div class="container">
+        <div class="row">
+          {% for image in gallery %}
+          <div class="col-4">
+            <div class="col-md-4">
+              <div class="card mb-4 shadow-sm" style="width:20rem;height:23rem;">
+                <div class="card-header">{{image.name}}</div>
+                <div class="card-body">
+                  <img class="card-img-top" src="{{ image.photo.url }}" data-toggle="modal" data-target="#myModal{{image.id}}"
+                    style="height:150px;" />
+      
+      
+                  <br>
+                  <p class="card-text">{{image.summary}}</p>
+                  <div class="d-flex justify-content-between align-items-center">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
+                        data-target="#myModal{{image.id}}">View</button>
+                    </div>
+                    <small class="text-muted">Location : {{image.location}}</small>
+                    <small class="text-muted">Category : {{image.category}}</small>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+</section>
 
 {% endblock %}
-
