--- a/gallery/templates/gallery.html
+++ b/gallery/templates/gallery.html
@@ -1,63 +1,84 @@
 {%extends 'base.html'%}
 
+{% load bootstrap5 %}
+{% load static%}
+
 {% block content %}
+
+
+{% for image in gallery %}
 <div class="container">
   <div class="row">
-    {% for image in gallery %}
-    <div class="col-4">
-      <div class="col-md-4">
-        <div class="card mb-4 shadow-sm" style="width:20rem;height:23rem;">
-          <div class="card-header">{{image.name}}</div>
-          <div class="card-body">
-            <img class="card-img-top" src="{{ image.photo.url }}" data-toggle="modal" data-target="#myModal{{image.id}}"
-              style="height:150px;" />
+    <div class="col-md-4">
+      <div class="card mb-4 shadow-sm" style="width:20rem;height:23rem;">
+        <div class="card-header">{{image.name}}</div>
+        <div class="card-body">
+          <img class="card-img-top" src="{{ image.photo.url }}" data-toggle="modal" data-target="#myModal{{image.id}}"
+            style="height:150px;" />
 
 
-            <br>
-            <p class="card-text">{{image.summary}}</p>
-            <div class="d-flex justify-content-between align-items-center">
-              <div class="btn-group">
-                <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
-                  data-target="#myModal{{image.id}}">View</button>
-              </div>
-              <small class="text-muted">Location : {{image.location}}</small>
-              <small class="text-muted">Category : {{image.category}}</small>
+          <br>
+          <p class="card-text">{{image.summary}}</p>
+          <div class="d-flex justify-content-between align-items-center">
+            <div class="btn-group">
+              <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
+                data-target="#myModal{{image.id}}">View</button>
             </div>
+            <small class="text-muted">Location : {{image.location}}</small>
+            <small class="text-muted">Category : {{image.category}}</small>
           </div>
         </div>
       </div>
     </div>
-    {% endfor %}
   </div>
 </div>
 
 <!--Modal-->
 
-<div class="modal"  tabindex="-1" role="dialog">
-  <div class="modal-dialog" role="document">
+<div class="modal fade" id="myModal{{image.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Modal title</h5>
+        <h5 class="modal-title" id="#{{image.name}}">{{image.name}}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <div class="modal-body">
-        <p>Modal body text goes here.</p>
+      <div>
+        <img src="{{ image.photo.url }}" class="img-fluid" alt="{{image.name}}" />
       </div>
+      <div class="modal-body">{{image.description}}</div>
+      <div class="modal-body">Category: {{image.category}}</div>
+      <div class="modal-body">Location:{{image.location}}</div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Save changes</button>
+
+        <button type="button" class="btn btn-info"
+          value="https://django-photo-gallery.herokuapp.com{{ image.photo.url }}" onclick="copyURL(this.value)">Copy
+          URL</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
   </div>
 </div>
-
-
 <script>
-  $('#myModal').on('shown.bs.modal', function () {
-    $('#myInput').trigger('focus')
-  })
+  function copyURL(value) {
+    function handler(event) {
+      event.clipboardData.setData('text/plain', value);
+      event.preventDefault();
+      document.removeEventListener('copy', handler, true);
+    }
+    document.addEventListener('copy', handler, true);
+    document.execCommand('copy');
+  }
 </script>
-{% endblock %}
+{% empty %}
+<h3>The gallery is still empty!</h3>
 
+
+{% endfor %}
+
+
+</div>
+
+{% endblock %}
