--- a/gallery/templates/gallery.html
+++ b/gallery/templates/gallery.html
@@ -1,7 +1,8 @@
 {%extends 'base.html'%}
 
-{% load bootstrap5 %}
 {% load static%}
+{% load bootstrap5 %}
+
 
 {% block content %}
 
@@ -10,26 +11,29 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4">
-      <div class="card mb-4 shadow-sm" style="width:20rem;height:23rem;">
-        <div class="card-header">{{image.name}}</div>
-        <div class="card-body">
-          <img class="card-img-top" src="{{ image.photo.url }}" data-toggle="modal" data-target="#myModal{{image.id}}"
-            style="height:150px;" />
+      <div class="col-md-4"></div>
+      <div class="col-md-4"></div>
+        <div class="card mb-4 shadow-sm" style="width:20rem;height:23rem;">
+          <div class="card-header">{{image.name}}</div>
+          <div class="card-body">
+            <img class="card-img-top" src="{{ image.photo.url }}" data-toggle="modal" data-target="#myModal{{image.id}}"
+              style="height:150px;" />
 
 
-          <br>
-          <p class="card-text">{{image.summary}}</p>
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="btn-group">
-              <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
-                data-target="#myModal{{image.id}}">View</button>
+            <br>
+            <p class="card-text">{{image.summary}}</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <div class="btn-group">
+                <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal"
+                  data-target="#myModal{{image.id}}" style="padding-right:10px;">View</button>
+              </div>
+              <small class="text-muted">Location : {{image.location}}</small>
+              <small class="text-muted">Category : {{image.category}}</small>
             </div>
-            <small class="text-muted">Location : {{image.location}}</small>
-            <small class="text-muted">Category : {{image.category}}</small>
           </div>
         </div>
-      </div>
     </div>
+    
   </div>
 </div>
 
@@ -46,7 +50,7 @@
         </button>
       </div>
       <div>
-        <img src="{{ image.photo.url }}" class="img-fluid" alt="{{image.name}}" />
+        <img src="{{ image.photo.url }}" class="img-fluid" alt="{{image.name}}" style="height:300px; width: 400px;" />
       </div>
       <div class="modal-body">{{image.description}}</div>
       <div class="modal-body">Category: {{image.category}}</div>
