--- a/gallery/templates/search.html
+++ b/gallery/templates/search.html
@@ -12,7 +12,7 @@
           <br>
           <br>
           <br>
-          {% if images %}
+          {% if image %}
             <h2>Found {{ images|length }} of searched category {{message}}</h2>
           {% else %}
             <h2> Found 0 categories of the search term {{message}}</h2>
@@ -22,8 +22,8 @@
       
         <div class="row">
       
-        {% if images %}
-          {% for image in images %}
+        {% if image %}
+          {% for i in images %}
             <div class="col-sm-6 col-md-3">
                 <h1>{{image.name}}</h1>
                 <img src="{{image.photo.url}}">
