--- a/gallery/templates/navbar.html
+++ b/gallery/templates/navbar.html
@@ -14,10 +14,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent" style = "justify-content: end;">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">HOME</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href= "gallery/">PROJECTS</a>
+            <a class="nav-link" href= "{% url 'gallery' %}">ALL PROJECTS</a>
           </li>
 
           
