--- a/gallery/templates/gallery.html
+++ b/gallery/templates/gallery.html
@@ -11,6 +11,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8">
+
       <div class="card mb-4 shadow-sm" style="width:20rem;height:23rem;">
         <div class="card-header">{{image.name}}</div>
         <div class="card-body">
@@ -56,7 +57,7 @@
       <div class="modal-footer">
 
         <button type="button" class="btn btn-info"
-          value="https://django-photo-gallery.herokuapp.com{{ image.photo.url }}" onclick="copyURL(this.value)">Copy
+          value="https://vanili-photo.herokuapp.com/{{ image.photo.url }}" onclick="copyURL(this.value)">Copy
           URL</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
