--- a/gallery/templates/gallery.html
+++ b/gallery/templates/gallery.html
@@ -57,7 +57,7 @@
       <div class="modal-footer">
 
         <button type="button" class="btn btn-info"
-          value="https://vanili-photo.herokuapp.com/{{ image.photo.url }}" onclick="copyURL(this.value)">Copy
+          value="{{ image.photo.url }}" onclick="copyURL(this.value)">Copy
           URL</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
